Preparing to AA

--- a/Assignment 1/Assignment_1/Assignment_1.csproj
+++ b/Assignment 1/Assignment_1/Assignment_1.csproj
@@ -110,6 +110,7 @@
     <None Include="Assets\Objects\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
     <None Include="Assets\Objects\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
     <None Include="Assets\Objects\Statue Bear Rough Bronze\Materials\BearShader.shader" />
+    <None Include="Assets\SSAA.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
