--- a/Assignment 1/Assignment_1/Assembly-CSharp.csproj
+++ b/Assignment 1/Assignment_1/Assembly-CSharp.csproj
@@ -52,7 +52,6 @@
      <Compile Include="Assets\Objects\Floor\Materials\FloorShader.cs" />
      <Compile Include="Assets\Objects\HQ Classic Armchair\Materials\ChairShader.cs" />
      <Compile Include="Assets\Objects\Lamps pack\Materials\LampShader.cs" />
-     <Compile Include="Assets\Objects\Lion_Statue\Materials\BlockShader.cs" />
      <Compile Include="Assets\Objects\Lion_Statue\Materials\LionShader.cs" />
      <Compile Include="Assets\Objects\Standard Assets\Characters\ThirdPersonCharacter\Materials\EthanShader.cs" />
      <Compile Include="Assets\Objects\Standard Assets\Characters\ThirdPersonCharacter\Scripts\ThirdPersonCamera.cs" />
@@ -78,8 +77,10 @@
      <Compile Include="Assets\SMAA\Scripts\Preset.cs" />
      <Compile Include="Assets\SMAA\Scripts\QualityPreset.cs" />
      <Compile Include="Assets\SMAA\Scripts\SMAA.cs" />
+     <None Include="Assets\Shaders\FirstPass.cginc" />
      <None Include="Assets\SMAA\Shaders\SMAA.shader" />
      <None Include="Assets\Objects\HQ Classic Armchair\Materials\ChairShader.shader" />
+     <None Include="Assets\Shaders\SecondPass.cginc" />
      <None Include="Assets\Objects\Floor\Materials\FloorShader.shader" />
      <None Include="Assets\Objects\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
      <None Include="Assets\SMAA\Shaders\SMAA.cginc" />
@@ -88,7 +89,6 @@
      <None Include="Assets\Objects\Statue Bear Rough Bronze\Materials\BearShader.shader" />
      <None Include="Assets\Objects\Lamps pack\Materials\LampShader.shader" />
      <None Include="Assets\Objects\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
-     <None Include="Assets\Objects\Lion_Statue\Materials\BlockShader.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity_5-5-4/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
